syntax = "proto3";

package com.example.gateway.domain;

import "com/example/gateway/domain/user_domain.proto";

import "google/api/annotations.proto";
import "google/api/httpbody.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

message LoginData {
  string redirect_uri = 1;
  string csrf_token = 2;
  int64 session_expiration = 3;
  domain.UserInfo user_info = 4 [(validate.rules).message.required = true];
}
